ajout des modifications CSS :hover et :color

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         </div>
         <nav class="header-ul">
             <ul class="header-list">
-                <il class="il">Accueil</il>
-                <il class="il">Boutique</il>
-                <il class="il">Rejoignez-nous</il>
-                <il class="il">Nos Engagements</il>
+                <il class="il"><a href="#">Accueil</a></il>
+                <il class="il"><a href="#">Boutique</a></il>
+                <il class="il"><a href="#">Rejoignez-Nous</a></il>
+                <il class="il"><a href="nosengagements.html">Nos Engagements</a></il>
             </ul>
         </nav>
     </header>
@@ -49,9 +49,9 @@
         <section class="container thirty-article">
             <h2 class="h2-thirty-article">NOS ENGAGEMENTS POUR L’ENVIRONNEMENT</h2>
             <div class="imge-thirty-article">
-                <img class="img-thirty-article" src="img/Capture d’écran 2025-06-16 154807.png" alt="">
-                <img class="img-thirty-article" src="img/Capture d’écran 2025-06-16 155103.png" alt="">
-                <img class="img-thirty-article" src="img/Capture d’écran 2025-06-16 155148.png" alt="">
+                <img class="img-thirty-article" src="img/Capture d’écran 2025-06-16 154807.png" alt="" height="280" width="auto">
+                <img class="img-thirty-article" src="img/Capture d’écran 2025-06-16 155103.png" alt="" height="280" width="auto">
+                <img class="img-thirty-article" src="img/Capture d’écran 2025-06-16 155148.png" alt="" height="280" width="auto">
             </div>
             <div class="text-thirty-article">
                 <div class="first-thirty-article">
