--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul class="header-list">
                 <il class="il"><a href="#">Accueil</a></il>
                 <il class="il"><a href="#">Boutique</a></il>
-                <il class="il"><a href="#">Rejoignez-Nous</a></il>
+                <il class="il"><a href="Formcontact.html">Rejoignez-Nous</a></il>
                 <il class="il"><a href="nosengagements.html">Nos Engagements</a></il>
             </ul>
         </nav>
